Bug 125014 - LO freeze when edit chart Y axis (gen)
Summary: LO freeze when edit chart Y axis (gen)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-04-28 19:08 UTC by raal
Modified: 2019-04-30 14:46 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test file (21.38 KB, application/vnd.oasis.opendocument.spreadsheet)
2019-04-28 19:08 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2019-04-28 19:08:21 UTC
Description:
Version: 6.3.0.0.alpha0+
Build ID: e913727c7ee3af0bb4031c6829abfb3373306492
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 

Steps to Reproduce:
1. open attached file with plugin gen:  SAL_USE_VCLPLUGIN=gen ./instdir/program/soffice 
2. double click chart
3. menu Format - axis - y axis


Actual Results:
LO freeze
error in command line: free(): invalid pointer

Expected Results:
LO works


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 raal 2019-04-28 19:08:52 UTC
Created attachment 151058 [details]
test file
Comment 2 Xisco Faulí 2019-04-29 11:08:33 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=962debec1fa1c51d3eef96ca3432976ecfc0aa94

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2019-04-13 00:07:48 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2019-04-13 04:23:16 +0200
commit 962debec1fa1c51d3eef96ca3432976ecfc0aa94 (patch)
tree 06ecc4cc05cd6624cd8b5fe6b7e6787bd4b62270
parent 9695896d8f0e3d4b2961c7a753c279a70f5bbaf2 (diff)
tdf#124543 add functs. to scale 32bit bitmaps to BitmapScaleSuper

Bisected with: bibisect-linux64-6.3

Adding Cc: to Tomaž Vajngerl
Comment 3 Xisco Faulí 2019-04-29 11:26:41 UTC
Same problem if we insert a comment... LibreOffice hangs...
Comment 4 Buovjaga 2019-04-29 12:19:02 UTC
(In reply to Xisco Faulí from comment #3)
> Same problem if we insert a comment... LibreOffice hangs...

I guess inserting a comment would be a good target for a UI test, if possible. Both for Calc and Writer.
Comment 5 Tomaz Vajngerl 2019-04-29 12:57:58 UTC
Please no UI tests unless there is no other way.
Comment 6 Commit Notification 2019-04-30 08:54:42 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/60095b481d9663f7bcfe8078d669030ab2bc6a05%5E%21

tdf#125014 only use a fastpath if src. and dest. bitcount matches

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-04-30 14:46:00 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 1ae5ca077119982ae83833871326c86d9930ae11
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Tomaž Vajngerl, thanks for fixing this issue!!