tdf#125014 only use a fastpath if src. and dest. bitcount matches

It can happen that a bitmap is 32-bit (made from a VirtualDevice)
but we can't even create a 32-bit bitmap ourselves. In that case
we can only create a 24-bit, but now we can't use the fastpath
anymore as the bitdepth of source and destination is not the same.

Fix this by making sure the general scaler will be used when
source and destination bitmaps don't have the same bitcount.

Change-Id: Icdb974093558d618b7c056b29963b45ee31ce200